TESTS = check_tempus
check_PROGRAMS = check_tempus
INCLUDES = -I@top_srcdir@/src/include @POSTGRESQL_CFLAGS@ @XML_CFLAGS@ @GLIB_CFLAGS@ @CHECK_CFLAGS@
AM_CFLAGS = -Wall -Wcast-qual ${DBGFLAG} ${USE_IPV6_FLAG}
check_tempus_SOURCES = \
			@top_srcdir@/tests/check_tempus.c \
			@top_srcdir@/tests/testing.c \
	        @top_srcdir@/tests/movement_tests.c \
	        @top_srcdir@/tests/object_tests.c \
			@top_srcdir@/tests/tmpstr_tests.c \
	        @top_srcdir@/tests/strutil_tests.c \
	        @top_srcdir@/tests/player_io_tests.c \
	        @top_srcdir@/tests/quest_tests.c

check_tempus_LDADD = \
			$(top_builddir)/src/clan.o \
			$(top_builddir)/src/act.barb.o \
			$(top_builddir)/src/act.cleric.o \
			$(top_builddir)/src/act.bard.o \
			$(top_builddir)/src/act.cyborg.o \
			$(top_builddir)/src/act.hood.o \
			$(top_builddir)/src/act.knight.o \
			$(top_builddir)/src/act.mage.o \
			$(top_builddir)/src/act.merc.o \
			$(top_builddir)/src/act.monk.o \
			$(top_builddir)/src/act.physic.o \
			$(top_builddir)/src/act.psionic.o \
			$(top_builddir)/src/act.ranger.o \
			$(top_builddir)/src/act.thief.o \
			$(top_builddir)/src/char_class.o \
			$(top_builddir)/src/act.offensive.o \
			$(top_builddir)/src/combat_messages.o \
			$(top_builddir)/src/combat_utils.o \
			$(top_builddir)/src/fight.o \
			$(top_builddir)/src/pvp.o \
			$(top_builddir)/src/account.o \
			$(top_builddir)/src/obj_matcher.o \
			$(top_builddir)/src/analysis.o \
			$(top_builddir)/src/constants.o \
			$(top_builddir)/src/db.o \
			$(top_builddir)/src/objsave.o \
			$(top_builddir)/src/xml.o \
			$(top_builddir)/src/dyntext.o \
			$(top_builddir)/src/boardeditor.o \
			$(top_builddir)/src/fileeditor.o \
			$(top_builddir)/src/editor.o \
			$(top_builddir)/src/maileditor.o \
			$(top_builddir)/src/polleditor.o \
			$(top_builddir)/src/progeditor.o \
			$(top_builddir)/src/texteditor.o \
			$(top_builddir)/src/flow_room.o \
			$(top_builddir)/src/help_item.o \
			$(top_builddir)/src/help_collection.o \
			$(top_builddir)/src/house.o \
			$(top_builddir)/src/interpreter.o \
			$(top_builddir)/src/role.o \
			$(top_builddir)/src/security.o \
			$(top_builddir)/src/magic.o \
			$(top_builddir)/src/spell_parser.o \
			$(top_builddir)/src/spells.o \
			$(top_builddir)/src/act.comm.o \
			$(top_builddir)/src/act.informative.o \
			$(top_builddir)/src/act.movement.o \
			$(top_builddir)/src/act.obj.o \
			$(top_builddir)/src/act.other.o \
			$(top_builddir)/src/act.wizard.o \
			$(top_builddir)/src/config.o \
			$(top_builddir)/src/limits.o \
			$(top_builddir)/src/login.o \
			$(top_builddir)/src/artisan.o \
			$(top_builddir)/src/cityguard.o \
			$(top_builddir)/src/guard.o \
			$(top_builddir)/src/mail.o \
			$(top_builddir)/src/mobact.o \
			$(top_builddir)/src/stress.o \
			$(top_builddir)/src/tattooist.o \
			$(top_builddir)/src/vendor.o \
			$(top_builddir)/src/voice.o \
			$(top_builddir)/src/gnetsys.o \
			$(top_builddir)/src/ban.o \
			$(top_builddir)/src/comm.o \
			$(top_builddir)/src/nanny.o \
			$(top_builddir)/src/boards.o \
			$(top_builddir)/src/smokes.o \
			$(top_builddir)/src/bomb.o \
			$(top_builddir)/src/guns.o \
			$(top_builddir)/src/paths.o \
			$(top_builddir)/src/vehicle.o \
			$(top_builddir)/src/olc_mob.o \
			$(top_builddir)/src/olc.o \
			$(top_builddir)/src/olc_obj.o \
			$(top_builddir)/src/olc_srch.o \
			$(top_builddir)/src/olc_wld.o \
			$(top_builddir)/src/olc_zon.o \
			$(top_builddir)/src/quest.o \
			$(top_builddir)/src/prog_compile.o \
			$(top_builddir)/src/prog.o \
			$(top_builddir)/src/search.o \
			$(top_builddir)/src/act.social.o \
			$(top_builddir)/src/language.o \
			$(top_builddir)/src/demonic_guard.o \
			$(top_builddir)/src/remorter.o \
			$(top_builddir)/src/duke.o \
			$(top_builddir)/src/hell_hunter_spec.o \
			$(top_builddir)/src/spec_assign.o \
			$(top_builddir)/src/spec_procs.o \
			$(top_builddir)/src/styx.o \
			$(top_builddir)/src/creature.o \
			$(top_builddir)/src/creature_io.o \
			$(top_builddir)/src/obj_data.o \
			$(top_builddir)/src/players.o \
			$(top_builddir)/src/race.o \
			$(top_builddir)/src/room_data.o \
			$(top_builddir)/src/accstr.o \
			$(top_builddir)/src/handler.o \
			$(top_builddir)/src/gpqueue.o \
			$(top_builddir)/src/graph.o \
			$(top_builddir)/src/modify.o \
			$(top_builddir)/src/random.o \
			$(top_builddir)/src/sight.o \
			$(top_builddir)/src/tmpstr.o \
			$(top_builddir)/src/strutil.o \
			$(top_builddir)/src/utils.o \
			$(top_builddir)/src/weather.o \
			@CHECK_LIBS@ @POSTGRESQL_LDFLAGS@ @XML_LIBS@ @GLIB_LIBS@ \
	        -lcrypt
