TESTS = check_tempus
check_PROGRAMS = check_tempus
AM_CFLAGS =-I@top_srcdir@/src/include @POSTGRESQL_CPPFLAGS@ @XML_CFLAGS@ @GLIB_CFLAGS@ @CHECK_CFLAGS@  -Wall -Wcast-qual ${DBGFLAG} ${USE_IPV6_FLAG} -g -O0
check_tempus_SOURCES = \
			@top_srcdir@/tests/check_tempus.c \
			@top_srcdir@/tests/testing.c \
	        @top_srcdir@/tests/movement_tests.c \
	        @top_srcdir@/tests/object_tests.c \
			@top_srcdir@/tests/editor_tests.c \
			@top_srcdir@/tests/tmpstr_tests.c \
	        @top_srcdir@/tests/strutil_tests.c \
	        @top_srcdir@/tests/player_io_tests.c \
	        @top_srcdir@/tests/prog_tests.c \
	        @top_srcdir@/tests/quest_tests.c

check_tempus_LDADD = \
				 $(top_builddir)/src/clan/clan.o \
				 $(top_builddir)/src/classes/act.barb.o \
                 $(top_builddir)/src/classes/act.cleric.o \
                 $(top_builddir)/src/classes/act.bard.o \
                 $(top_builddir)/src/classes/act.cyborg.o \
                 $(top_builddir)/src/classes/act.knight.o \
                 $(top_builddir)/src/classes/act.mage.o \
                 $(top_builddir)/src/classes/act.merc.o \
                 $(top_builddir)/src/classes/act.monk.o \
                 $(top_builddir)/src/classes/act.physic.o \
                 $(top_builddir)/src/classes/act.psionic.o \
                 $(top_builddir)/src/classes/act.ranger.o \
                 $(top_builddir)/src/classes/act.thief.o \
                 $(top_builddir)/src/classes/char_class.o \
                 $(top_builddir)/src/combat/act.offensive.o \
                 $(top_builddir)/src/combat/combat_messages.o \
                 $(top_builddir)/src/combat/combat_utils.o \
                 $(top_builddir)/src/combat/fight.o \
                 $(top_builddir)/src/combat/pvp.o \
				 $(top_builddir)/src/db/account.o \
                 $(top_builddir)/src/db/constants.o \
                 $(top_builddir)/src/db/db.o \
                 $(top_builddir)/src/db/mob_matcher.o \
                 $(top_builddir)/src/db/obj_matcher.o \
                 $(top_builddir)/src/db/objsave.o \
                 $(top_builddir)/src/db/xml.o \
				 $(top_builddir)/src/dyntext/dyntext.o \
                 $(top_builddir)/src/editor/boardeditor.o \
                 $(top_builddir)/src/editor/fileeditor.o \
                 $(top_builddir)/src/editor/editor.o \
                 $(top_builddir)/src/editor/maileditor.o \
                 $(top_builddir)/src/editor/polleditor.o \
                 $(top_builddir)/src/editor/progeditor.o \
                 $(top_builddir)/src/editor/texteditor.o \
                 $(top_builddir)/src/flow_room/flow_room.o \
                 $(top_builddir)/src/help/help_item.o \
                 $(top_builddir)/src/help/help_collection.o \
                 $(top_builddir)/src/house/house.o \
                 $(top_builddir)/src/interpreter/interpreter.o \
                 $(top_builddir)/src/interpreter/role.o \
                 $(top_builddir)/src/interpreter/security.o \
                 $(top_builddir)/src/magic/magic.o \
                 $(top_builddir)/src/magic/spell_parser.o \
                 $(top_builddir)/src/magic/spells.o \
                 $(top_builddir)/src/misc/act.comm.o \
                 $(top_builddir)/src/misc/act.informative.o \
                 $(top_builddir)/src/misc/act.movement.o \
                 $(top_builddir)/src/misc/act.obj.o \
                 $(top_builddir)/src/misc/act.other.o \
                 $(top_builddir)/src/misc/act.wizard.o \
                 $(top_builddir)/src/misc/config.o \
                 $(top_builddir)/src/misc/limits.o \
                 $(top_builddir)/src/misc/login.o \
                 $(top_builddir)/src/mobiles/artisan.o \
                 $(top_builddir)/src/mobiles/cityguard.o \
                 $(top_builddir)/src/mobiles/guard.o \
                 $(top_builddir)/src/mobiles/mail.o \
                 $(top_builddir)/src/mobiles/mobact.o \
                 $(top_builddir)/src/mobiles/stress.o \
                 $(top_builddir)/src/mobiles/tattooist.o \
                 $(top_builddir)/src/mobiles/vendor.o \
                 $(top_builddir)/src/mobiles/voice.o \
                 $(top_builddir)/src/net/gnetsys.o \
                 $(top_builddir)/src/net/ban.o \
                 $(top_builddir)/src/net/comm.o \
                 $(top_builddir)/src/net/nanny.o \
                 $(top_builddir)/src/objects/boards.o \
                 $(top_builddir)/src/objects/smokes.o \
                 $(top_builddir)/src/objects/bomb.o \
                 $(top_builddir)/src/objects/guns.o \
                 $(top_builddir)/src/objects/paths.o \
                 $(top_builddir)/src/objects/vehicle.o \
                 $(top_builddir)/src/olc/olc_mob.o \
                 $(top_builddir)/src/olc/olc.o \
                 $(top_builddir)/src/olc/olc_obj.o \
                 $(top_builddir)/src/olc/olc_srch.o \
                 $(top_builddir)/src/olc/olc_wld.o \
                 $(top_builddir)/src/olc/olc_zon.o \
                 $(top_builddir)/src/quest/quest.o \
                 $(top_builddir)/src/search/prog_compile.o \
                 $(top_builddir)/src/search/prog.o \
                 $(top_builddir)/src/search/search.o \
                 $(top_builddir)/src/social/act.social.o \
                 $(top_builddir)/src/social/language.o \
                 $(top_builddir)/src/specials/demonic_guard.o \
                 $(top_builddir)/src/specials/remorter.o \
                 $(top_builddir)/src/specials/duke.o \
                 $(top_builddir)/src/specials/hell_hunter_spec.o \
                 $(top_builddir)/src/specials/spec_assign.o \
                 $(top_builddir)/src/specials/spec_procs.o \
                 $(top_builddir)/src/specials/styx.o \
                 $(top_builddir)/src/structs/creature.o \
                 $(top_builddir)/src/structs/creature_io.o \
                 $(top_builddir)/src/structs/obj_data.o \
                 $(top_builddir)/src/structs/players.o \
                 $(top_builddir)/src/structs/race.o \
                 $(top_builddir)/src/structs/room_data.o \
                 $(top_builddir)/src/util/accstr.o \
                 $(top_builddir)/src/util/handler.o \
                 $(top_builddir)/src/util/gpqueue.o \
                 $(top_builddir)/src/util/graph.o \
                 $(top_builddir)/src/util/modify.o \
                 $(top_builddir)/src/util/random.o \
                 $(top_builddir)/src/util/screen.o \
                 $(top_builddir)/src/util/sight.o \
                 $(top_builddir)/src/util/tmpstr.o \
				 $(top_builddir)/src/util/strutil.o \
                 $(top_builddir)/src/util/utils.o \
                 $(top_builddir)/src/weather/weather.o \
			@CHECK_LIBS@ @POSTGRESQL_LDFLAGS@ @POSTGRESQL_LIBS@ @XML_LIBS@ @GLIB_LIBS@ \
	        -lcrypt
